--- a/kubernetes/main/apps/default/calibre-web/ks.yaml
+++ b/kubernetes/main/apps/default/calibre-web/ks.yaml
@@ -1,8 +1,9 @@
 ---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/kustomization-kustomize-v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: calibre-web
+  name: &appname calibre-web
   namespace: flux-system
 spec:
   targetNamespace: default
@@ -16,3 +17,6 @@ spec:
   interval: 30m
   retryInterval: 1m
   timeout: 3m
+  postBuild:
+    substitute:
+      APP: *appname
