--- a/kubernetes/main/apps/default/radarr/ks.yaml
+++ b/kubernetes/main/apps/default/radarr/ks.yaml
@@ -9,6 +9,7 @@ spec:
   dependsOn:
     - name: cloudnative-pg-cluster
     - name: external-secrets-stores
+    - name: volsync
   path: ./kubernetes/main/apps/default/radarr/app
   prune: true
   sourceRef:
@@ -17,3 +18,6 @@ spec:
   interval: 30m
   retryInterval: 1m
   timeout: 3m
+  postBuild:
+    substitute:
+      APP: *appname
