--- a/kubernetes/main/apps/default/radarr/ks.yaml
+++ b/kubernetes/main/apps/default/radarr/ks.yaml
@@ -1,11 +1,15 @@
 ---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/kustomization-kustomize-v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: radarr
+  name: &appname radarr
   namespace: flux-system
 spec:
   targetNamespace: default
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   dependsOn:
     - name: cloudnative-pg-cluster
     - name: external-secrets-stores
