--- a/kubernetes/main/apps/longhorn-system/longhorn/config/snapshot.yaml
+++ b/kubernetes/main/apps/longhorn-system/longhorn/config/snapshot.yaml
@@ -1,4 +1,5 @@
 ---
+# yaml-language-server: $schema=https://kubernetesjsonschema.dev/v1.18.1-standalone-strict/storageclass.json
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 reclaimPolicy: Delete
@@ -11,10 +12,11 @@ parameters:
   replicaAutoBalance: best-effort
   staleReplicaTimeout: "30"
 allowVolumeExpansion: true
-volumeBindingMode: WaitForFirstConsumer
+volumeBindingMode: Immediate
 metadata:
   name: longhorn-snapshot
 ---
+# yaml-language-server: $schema=https://kubernetesjsonschema.dev/v1.18.1-standalone-strict/storageclass.json
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 reclaimPolicy: Delete
@@ -22,10 +24,10 @@ provisioner: driver.longhorn.io
 parameters:
   # we set this to 2 replica for less copies of the cache, which can be blown away safely.
   dataLocality: disabled
-  numberOfReplicas: "1"
+  numberOfReplicas: "2"
   replicaAutoBalance: best-effort
   staleReplicaTimeout: "30"
 allowVolumeExpansion: true
-volumeBindingMode: WaitForFirstConsumer
+volumeBindingMode: Immediate
 metadata:
   name: longhorn-cache
