--- a/kubernetes/main/apps/default/calibre-web/ks.yaml
+++ b/kubernetes/main/apps/default/calibre-web/ks.yaml
@@ -7,8 +7,12 @@ metadata:
   namespace: flux-system
 spec:
   targetNamespace: default
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   dependsOn:
     - name: longhorn
+    - name: volsync
   path: ./kubernetes/main/apps/default/calibre-web/app
   prune: true
   sourceRef:
