--- a/kubernetes/main/apps/default/bazarr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/default/bazarr/app/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: bazarr
+  name: &app bazarr
 spec:
   interval: 30m
   chart:
@@ -81,8 +81,7 @@ spec:
               - *host
     persistence:
       config:
-        enabled: true
-        existingClaim: bazarr-config
+        existingClaim: *app
       media:
         type: nfs
         server: nas.${SECRET_HOME_DOMAIN}
