--- a/kubernetes/main/apps/default/bazarr/ks.yaml
+++ b/kubernetes/main/apps/default/bazarr/ks.yaml
@@ -2,13 +2,17 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: bazarr
+  name: &appname bazarr
   namespace: flux-system
 spec:
   targetNamespace: default
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   dependsOn:
     - name: cloudnative-pg-cluster
     - name: external-secrets-stores
+    - name: volsync
   path: ./kubernetes/main/apps/default/bazarr/app
   prune: true
   sourceRef:
@@ -17,3 +21,7 @@ spec:
   interval: 30m
   retryInterval: 1m
   timeout: 3m
+  postBuild:
+    substitute:
+      APP: *appname
+      VOLSYNC_CAPACITY: 1Gi
