--- a/kubernetes/main/apps/default/gitea/app/kustomization.yaml
+++ b/kubernetes/main/apps/default/gitea/app/kustomization.yaml
@@ -5,4 +5,4 @@ resources:
   - ./externalsecret.yaml
   - ./externalsecret-oauth.yaml
   - ./helmrelease.yaml
-  - ./pvc.yaml
+  - ../../../../templates/volsync
