--- a/kubernetes/main/apps/default/home-assistant/app/kustomization.yaml
+++ b/kubernetes/main/apps/default/home-assistant/app/kustomization.yaml
@@ -5,4 +5,4 @@ kind: Kustomization
 resources:
   - ./helmrelease.yaml
   - ./externalsecret.yaml
-  - ./pvc.yaml
+  - ../../../../templates/volsync
