--- a/kubernetes/main/apps/default/home-assistant/ks.yaml
+++ b/kubernetes/main/apps/default/home-assistant/ks.yaml
@@ -3,15 +3,19 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: home-assistant
+  name: &appname home-assistant
   namespace: flux-system
 spec:
   targetNamespace: default
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   dependsOn:
     - name: multus-config
     - name: cloudnative-pg-cluster
     - name: longhorn
     - name: external-secrets-stores
+    - name: volsync
   path: ./kubernetes/main/apps/default/home-assistant/app
   prune: true
   sourceRef:
@@ -21,3 +25,6 @@ spec:
   interval: 30m
   retryInterval: 1m
   timeout: 5m
+  postBuild:
+    substitute:
+      APP: *appname
