--- a/kubernetes/main/apps/default/audiobookshelf/app/helmrelease.yaml
+++ b/kubernetes/main/apps/default/audiobookshelf/app/helmrelease.yaml
@@ -81,7 +81,7 @@ spec:
       config:
         existingClaim: *app
         advancedMounts:
-          calibre-web:
+          audiobookshelf:
             app:
               - path: /data
       media:
