migrate next batch to volsync

--- a/kubernetes/main/apps/default/mosquitto/app/helmrelease.yaml
+++ b/kubernetes/main/apps/default/mosquitto/app/helmrelease.yaml
@@ -75,7 +75,7 @@ spec:
     persistence:
       config:
         enabled: true
-        existingClaim: mosquitto-config
+        existingClaim: *app
         globalMounts:
           - path: /data
       config-file:
