--- a/kubernetes/main/apps/default/mosquitto/ks.yaml
+++ b/kubernetes/main/apps/default/mosquitto/ks.yaml
@@ -2,10 +2,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: mosquitto
+  name: &appname mosquitto
   namespace: flux-system
 spec:
   targetNamespace: default
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   dependsOn:
     - name: longhorn
     - name: external-secrets-stores
@@ -17,3 +20,7 @@ spec:
   interval: 30m
   retryInterval: 1m
   timeout: 3m
+  postBuild:
+    substitute:
+      APP: *appname
+      VOLSYNC_CAPACITY: 128Mi
