--- a/kubernetes/main/apps/default/sabnzbd/ks.yaml
+++ b/kubernetes/main/apps/default/sabnzbd/ks.yaml
@@ -1,11 +1,17 @@
 ---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/kustomization-kustomize-v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: sabnzbd
+  name: &appname sabnzbd
   namespace: flux-system
 spec:
   targetNamespace: default
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
+  dependsOn:
+    - name: volsync
   path: ./kubernetes/main/apps/default/sabnzbd/app
   prune: true
   sourceRef:
@@ -14,3 +20,7 @@ spec:
   interval: 30m
   retryInterval: 1m
   timeout: 3m
+  postBuild:
+    substitute:
+      APP: *appname
+      VOLSYNC_CAPACITY: 1Gi
