--- a/kubernetes/main/apps/default/sonarr/ks.yaml
+++ b/kubernetes/main/apps/default/sonarr/ks.yaml
@@ -1,14 +1,19 @@
 ---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/kustomization-kustomize-v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: sonarr
+  name: &appname sonarr
   namespace: flux-system
 spec:
   targetNamespace: default
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   dependsOn:
     - name: cloudnative-pg-cluster
     - name: external-secrets-stores
+    - name: volsync
   path: ./kubernetes/main/apps/default/sonarr/app
   prune: true
   sourceRef:
@@ -17,3 +22,6 @@ spec:
   interval: 30m
   retryInterval: 1m
   timeout: 3m
+  postBuild:
+    substitute:
+      APP: *appname
