--- a/kubernetes/main/apps/default/mosquitto/app/pvc.yaml
+++ b/kubernetes/main/apps/default/mosquitto/app/pvc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mosquitto-config
+  name: mosquitto
 spec:
   accessModes:
     - ReadWriteOnce
