--- a/kubernetes/main/apps/longhorn-system/longhorn/config/snapshot.yaml
+++ b/kubernetes/main/apps/longhorn-system/longhorn/config/snapshot.yaml
@@ -12,7 +12,7 @@ parameters:
   replicaAutoBalance: best-effort
   staleReplicaTimeout: "30"
 allowVolumeExpansion: true
-volumeBindingMode: Immediate
+volumeBindingMode: WaitForFirstConsumer
 metadata:
   name: longhorn-snapshot
 ---
@@ -28,6 +28,6 @@ parameters:
   replicaAutoBalance: best-effort
   staleReplicaTimeout: "30"
 allowVolumeExpansion: true
-volumeBindingMode: Immediate
+volumeBindingMode: WaitForFirstConsumer
 metadata:
   name: longhorn-cache
