--- a/kubernetes/main/apps/default/tandoor/app/kustomization.yaml
+++ b/kubernetes/main/apps/default/tandoor/app/kustomization.yaml
@@ -4,5 +4,5 @@ kind: Kustomization
 resources:
   - ./helmrelease.yaml
   - ./externalsecret.yaml
-  - ./pvc.yaml
   - ./configmap.yaml
+  - ../../../../templates/volsync
