--- a/kubernetes/main/apps/default/tautulli/app/helmrelease.yaml
+++ b/kubernetes/main/apps/default/tautulli/app/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: tautulli
+  name: &app tautulli
 spec:
   interval: 30m
   chart:
@@ -85,7 +85,6 @@ spec:
               - *host
     persistence:
       config:
-        enabled: true
-        existingClaim: tautulli-config
+        existingClaim: *app
         globalMounts:
           - path: /config
