--- a/kubernetes/main/apps/default/govee2mqtt/app/externalsecret.yaml
+++ b/kubernetes/main/apps/default/govee2mqtt/app/externalsecret.yaml
@@ -9,8 +9,8 @@ spec:
     template:
       type: Opaque
       data:
-        username: "{{ .GOVEE_MQTT_USER }}"
-        password: "{{ .GOVEE_MQTT_PASSWORD }}"
+        GOVEE_MQTT_USER: "{{ .GOVEE_MQTT_USER }}"
+        GOVEE_MQTT_PASSWORD: "{{ .GOVEE_MQTT_PASSWORD }}"
   data:
     - secretKey: GOVEE_MQTT_USER
       sourceRef:
