--- a/kubernetes/main/apps/default/govee2mqtt/app/helmrelease.yaml
+++ b/kubernetes/main/apps/default/govee2mqtt/app/helmrelease.yaml
@@ -42,6 +42,7 @@ spec:
               GOVEE_MQTT_HOST: mosquitto.default.svc.cluster.local
               GOVEE_MQTT_PORT: 1883
               GOVEE_TEMPERATURE_SCALE: C
+              GOVEE_LAN_BROADCAST_ALL: true
             envFrom:
               - secretRef:
                   name: govee2mqtt-secret
