--- a/kubernetes/main/apps/volsync-system/snapshot-controller/app/helmrelease.yaml
+++ b/kubernetes/main/apps/volsync-system/snapshot-controller/app/helmrelease.yaml
@@ -40,4 +40,4 @@ spec:
               # see: https://github.com/longhorn/longhorn/issues/2534#issuecomment-1010508714
               type: snap
     webhook:
-      enabled: false
+      enabled: true
