--- a/kubernetes/main/apps/default/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/main/apps/default/nextcloud/app/helmrelease.yaml
@@ -238,7 +238,7 @@ spec:
 
     persistence:
       enabled: true
-      existingClaim: nextcloud-config-v1
+      existingClaim: *app
 
     cronjob:
       enabled: true
