--- a/kubernetes/main/apps/default/radicale/app/kustomization.yaml
+++ b/kubernetes/main/apps/default/radicale/app/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 resources:
   - ./helmrelease.yaml
   - ./externalsecret.yaml
+  - ../../../../templates/volsync
 configMapGenerator:
   - name: radicale-config
     files:
