--- a/kubernetes/main/apps/default/radicale/ks.yaml
+++ b/kubernetes/main/apps/default/radicale/ks.yaml
@@ -2,12 +2,15 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: radicale
+  name: &appname radicale
   namespace: flux-system
 spec:
   targetNamespace: default
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   dependsOn:
-    - name: longhorn
+    - name: volsync
   path: ./kubernetes/main/apps/default/radicale/app
   prune: true
   sourceRef:
@@ -16,3 +19,7 @@ spec:
   interval: 30m
   retryInterval: 1m
   timeout: 3m
+  postBuild:
+    substitute:
+      APP: *appname
+      VOLSYNC_CAPACITY: 1Gi
