--- a/kubernetes/main/apps/default/vaultwarden/ks.yaml
+++ b/kubernetes/main/apps/default/vaultwarden/ks.yaml
@@ -2,12 +2,15 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: vaultwarden
+  name: &appname vaultwarden
   namespace: flux-system
 spec:
   targetNamespace: default
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   dependsOn:
-    - name: longhorn
+    - name: volsync
     - name: cloudnative-pg-cluster
     - name: external-secrets-stores
   path: ./kubernetes/main/apps/default/vaultwarden/app
@@ -18,3 +21,7 @@ spec:
   interval: 30m
   retryInterval: 1m
   timeout: 3m
+  postBuild:
+    substitute:
+      APP: *appname
+      VOLSYNC_CAPACITY: 1Gi
