--- a/kubernetes/main/apps/default/zigbee2mqtt/ks.yaml
+++ b/kubernetes/main/apps/default/zigbee2mqtt/ks.yaml
@@ -1,13 +1,17 @@
 ---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/kustomization-kustomize-v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: zigbee2mqtt
+  name: &appname zigbee2mqtt
   namespace: flux-system
 spec:
   targetNamespace: default
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   dependsOn:
-    - name: longhorn
+    - name: volsync
     - name: node-feature-rules
     - name: external-secrets-stores
   path: ./kubernetes/main/apps/default/zigbee2mqtt/app
@@ -18,3 +22,7 @@ spec:
   interval: 30m
   retryInterval: 1m
   timeout: 3m
+  postBuild:
+    substitute:
+      APP: *appname
+      VOLSYNC_CAPACITY: 1Gi
