--- a/kubernetes/main/apps/databases/influxdb/app/helmrelease.yaml
+++ b/kubernetes/main/apps/databases/influxdb/app/helmrelease.yaml
@@ -50,7 +50,7 @@ spec:
     persistence:
       enabled: true
       useExisting: true
-      name: influxdb-config
+      name: *app
 
     resources:
       requests:
