--- a/kubernetes/main/apps/databases/influxdb/ks.yaml
+++ b/kubernetes/main/apps/databases/influxdb/ks.yaml
@@ -2,12 +2,16 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: influxdb
+  name: &appname influxdb
   namespace: flux-system
 spec:
   targetNamespace: databases
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   dependsOn:
     - name: longhorn
+    - name: volsync
   path: ./kubernetes/main/apps/databases/influxdb/app
   prune: true
   sourceRef:
@@ -21,3 +25,6 @@ spec:
   interval: 30m
   retryInterval: 1m
   timeout: 3m
+  postBuild:
+    substitute:
+      APP: *appname
