--- a/kubernetes/main/apps/default/plex/trakt-sync/kustomization.yaml
+++ b/kubernetes/main/apps/default/plex/trakt-sync/kustomization.yaml
@@ -5,6 +5,7 @@ namespace: media
 resources:
   - ./helmrelease.yaml
   - ./externalsecret.yaml
+  - ../../../../templates/volsync
 commonLabels:
   app.kubernetes.io/name: plex-trakt-sync
   app.kubernetes.io/instance: plex-trakt-sync
