--- a/kubernetes/main/apps/default/plex/ks.yaml
+++ b/kubernetes/main/apps/default/plex/ks.yaml
@@ -74,7 +74,7 @@ spec:
   timeout: 5m
   postBuild:
     substitute:
-      APP: *app
+      APP: *appname
       VOLSYNC_CAPACITY: 10Gi
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/kustomization-kustomize-v1.json
