--- a/kubernetes/main/apps/longhorn-system/longhorn/config/recurring-jobs.yaml
+++ b/kubernetes/main/apps/longhorn-system/longhorn/config/recurring-jobs.yaml
@@ -1,28 +1,28 @@
-apiVersion: longhorn.io/v1beta1
-kind: RecurringJob
-metadata:
-  name: backup-1
-  namespace: longhorn-system
-spec:
-  cron: "0 4 * * ?" # Every day at 4
-  task: "backup"
-  groups:
-  - default
-  retain: 2
-  concurrency: 2
----
-apiVersion: longhorn.io/v1beta1
-kind: RecurringJob
-metadata:
-  name: snapshot-1
-  namespace: longhorn-system
-spec:
-  cron: "0 0/6 * * ?" # Every 6 hours
-  task: "snapshot"
-  groups:
-  - default
-  retain: 3
-  concurrency: 2
+# apiVersion: longhorn.io/v1beta1
+# kind: RecurringJob
+# metadata:
+#   name: backup-1
+#   namespace: longhorn-system
+# spec:
+#   cron: "0 4 * * ?" # Every day at 4
+#   task: "backup"
+#   groups:
+#   - default
+#   retain: 2
+#   concurrency: 2
+# ---
+# apiVersion: longhorn.io/v1beta1
+# kind: RecurringJob
+# metadata:
+#   name: snapshot-1
+#   namespace: longhorn-system
+# spec:
+#   cron: "0 0/6 * * ?" # Every 6 hours
+#   task: "snapshot"
+#   groups:
+#   - default
+#   retain: 3
+#   concurrency: 2
 ---
 apiVersion: longhorn.io/v1beta1
 kind: RecurringJob
