--- a/kubernetes/main/apps/default/plex/trakt-sync/helmrelease.yaml
+++ b/kubernetes/main/apps/default/plex/trakt-sync/helmrelease.yaml
@@ -84,7 +84,7 @@ spec:
         enabled: true
         existingClaim: *app
         advancedMounts:
-          plex-trakt-sync:
+          trakt-sync:
             app:
               - path: /app/config
       config-yaml:
