--- a/kubernetes/main/apps/default/recyclarr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/default/recyclarr/app/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: recyclarr
+  name: &app recyclarr
 spec:
   interval: 30m
   chart:
@@ -63,7 +63,7 @@ spec:
         seccompProfile: { type: RuntimeDefault }
     persistence:
       config:
-        existingClaim: recyclarr-config
+        existingClaim: *app
       config-file:
         type: configMap
         name: recyclarr-configmap
