--- a/kubernetes/main/templates/volsync/minio.yaml
+++ b/kubernetes/main/templates/volsync/minio.yaml
@@ -72,7 +72,7 @@ metadata:
 spec:
   sourcePVC: "${VOLSYNC_CLAIM:-${APP}}"
   trigger:
-    schedule: "0 * * * *"
+    schedule: "15 */8 * * *"
   restic:
     copyMethod: "${VOLSYNC_COPYMETHOD:-Snapshot}"
     pruneIntervalDays: 10
