Add volsync taskfile

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -6,7 +6,8 @@ vars:
   K8S_CLUSTER_DIR: "{{.ROOT_DIR}}/kubernetes/{{.K8S_CLUSTER}}"
 
 env:
-  KUBECONFIG: "{{.ROOT_DIR}}/kubeconfig"
+  KUBECONFIG: "{{.ROOT_DIR}}/kubernetes/main/kubeconfig"
+  MINIJINJA_CONFIG_FILE: "{{.ROOT_DIR}}/.minijinja.toml"
   SOPS_AGE_KEY_FILE: "{{.ROOT_DIR}}/age.key"
   TALOSCONFIG: "{{.K8S_CLUSTER_DIR}}/talos/clusterconfig/talosconfig"
 
@@ -16,6 +17,7 @@ includes:
   sops: .taskfiles/Sops/Taskfile.yaml
   talos: .taskfiles/Talos/Taskfile.yaml
   external-secrets: .taskfiles/ExternalSecrets/Taskfile.yaml
+  volsync: .taskfiles/Volsync/Taskfile.yaml
 
 tasks:
 
