update multus config

--- a/kubernetes/main/flux/vars/cluster-settings.yaml
+++ b/kubernetes/main/flux/vars/cluster-settings.yaml
@@ -13,3 +13,11 @@ data:
   SVC_PLEX_ADDR: 192.168.20.224
   SVC_POSTGRES_ADDR: 192.168.20.230
   SVC_SMTP_RELAY_ADDRESS: 192.168.20.233
+
+  # Networks
+  NET_TRUSTED_CIDR: 192.168.10.0/24
+  NET_SERVERS_CIDR: 192.168.20.0/24
+  NET_IOT_CIDR: 192.168.30.0/24
+
+  # Gateways
+  NET_IOT_GATEWAY_IP: 192.168.30.1
