--- a/kubernetes/main/apps/networking/multus/config/net-attach-iot.yaml
+++ b/kubernetes/main/apps/networking/multus/config/net-attach-iot.yaml
@@ -19,7 +19,8 @@ spec:
           "ipam": {
             "type": "static",
             "routes": [
-              { "dst": "192.168.10.0/24", "gw": "192.168.30.1" }
+              { "dst": "${NET_TRUSTED_CIDR}", "gw": "${NET_IOT_GATEWAY_IP}" },
+              { "dst": "${NET_IOT_CIDR}", "gw": "${NET_IOT_GATEWAY_IP}" }
             ]
           }
         },
