--- a/kubernetes/main/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/main/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
@@ -126,21 +126,10 @@ spec:
               replacement: $1
               sourceLabels: ["__meta_kubernetes_pod_node_name"]
               targetLabel: kubernetes_node
-    kube-state-metrics:
-      fullnameOverride: kube-state-metrics
-      metricLabelsAllowlist:
-        - pods=[*]
-        - deployments=[*]
-        - persistentvolumeclaims=[*]
-      prometheus:
-        monitor:
-          enabled: true
-          relabelings:
-            - action: replace
-              regex: (.*)
-              replacement: $1
-              sourceLabels: ["__meta_kubernetes_pod_node_name"]
-              targetLabel: kubernetes_node
+
+    kubeStateMetrics:
+      enabled: false
+
     grafana:
       enabled: false
       forceDeployDashboards: true
