--- a/kubernetes/main/apps/kube-system/kustomization.yaml
+++ b/kubernetes/main/apps/kube-system/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
   - ./external-secrets/ks.yaml
   - ./generic-device-plugin/ks.yaml
   - ./intel-device-plugin/ks.yaml
+  - ./kubelet-csr-approver/ks.yaml
   - ./metrics-server/ks.yaml
   - ./node-feature-discovery/ks.yaml
   - ./reloader/ks.yaml
