change folder path

--- a/kubernetes/main/apps/openebs-system/openebs/app/helmrelease.yaml
+++ b/kubernetes/main/apps/openebs-system/openebs/app/helmrelease.yaml
@@ -31,7 +31,7 @@ spec:
         enabled: true
         name: openebs-hostpath
         isDefaultClass: false
-        basePath: /var/mnt/extra/openebs/local
+        basePath: /var/openebs/local
       helperPod:
         image:
           registry: quay.io/
