--- a/kubernetes/main/talos/clusterconfig/.gitignore
+++ b/kubernetes/main/talos/clusterconfig/.gitignore
@@ -3,3 +3,5 @@ main-morefine.internal.yaml
 main-brix.internal.yaml
 talosconfig
 main-nuc14.internal.yaml
+main-nuc11.internal.yaml
+main-nuc13.internal.yaml
