--- a/kubernetes/main/apps/default/bazarr/ks.yaml
+++ b/kubernetes/main/apps/default/bazarr/ks.yaml
@@ -12,6 +12,7 @@ spec:
   dependsOn:
     - name: cloudnative-pg-cluster
     - name: external-secrets-stores
+    - name: longhorn
     - name: volsync
   path: ./kubernetes/main/apps/default/bazarr/app
   prune: true
