--- a/kubernetes/main/apps/default/plex/ks.yaml
+++ b/kubernetes/main/apps/default/plex/ks.yaml
@@ -11,6 +11,7 @@ spec:
       app.kubernetes.io/name: *appname
   dependsOn:
     - name: volsync
+    - name: longhorn
   path: ./kubernetes/main/apps/default/plex/app
   prune: true
   sourceRef:
