--- a/kubernetes/main/apps/default/radarr/ks.yaml
+++ b/kubernetes/main/apps/default/radarr/ks.yaml
@@ -14,6 +14,7 @@ spec:
     - name: cloudnative-pg-cluster
     - name: external-secrets-stores
     - name: volsync
+    - name: longhorn
   path: ./kubernetes/main/apps/default/radarr/app
   prune: true
   sourceRef:
