--- a/kubernetes/main/apps/default/radicale/ks.yaml
+++ b/kubernetes/main/apps/default/radicale/ks.yaml
@@ -11,6 +11,8 @@ spec:
       app.kubernetes.io/name: *appname
   dependsOn:
     - name: volsync
+    - name: external-secrets-stores
+    - name: longhorn
   path: ./kubernetes/main/apps/default/radicale/app
   prune: true
   sourceRef:
