--- a/kubernetes/main/apps/default/sabnzbd/ks.yaml
+++ b/kubernetes/main/apps/default/sabnzbd/ks.yaml
@@ -12,6 +12,7 @@ spec:
       app.kubernetes.io/name: *appname
   dependsOn:
     - name: volsync
+    - name: longhorn
   path: ./kubernetes/main/apps/default/sabnzbd/app
   prune: true
   sourceRef:
