--- a/kubernetes/main/apps/default/vaultwarden/ks.yaml
+++ b/kubernetes/main/apps/default/vaultwarden/ks.yaml
@@ -11,6 +11,7 @@ spec:
       app.kubernetes.io/name: *appname
   dependsOn:
     - name: volsync
+    - name: longhorn
     - name: cloudnative-pg-cluster
     - name: external-secrets-stores
   path: ./kubernetes/main/apps/default/vaultwarden/app
