--- a/kubernetes/main/apps/networking/nginx/internal/helmrelease.yaml
+++ b/kubernetes/main/apps/networking/nginx/internal/helmrelease.yaml
@@ -92,6 +92,6 @@ spec:
           cpu: 100m
           memory: 250Mi
         limits:
-          memory: 500Mi
+          memory: 1Gi
     defaultBackend:
       enabled: false
