--- a/kubernetes/main/apps/default/kustomization.yaml
+++ b/kubernetes/main/apps/default/kustomization.yaml
@@ -3,29 +3,29 @@ kind: Kustomization
 resources:
   # Flux-Kustomizations
   - ./atuin/ks.yaml
-  - ./audiobookshelf/ks.yaml
+  # - ./audiobookshelf/ks.yaml
   - ./authelia/ks.yaml
-  - ./bazarr/ks.yaml
-  - ./calibre-web/ks.yaml
-  - ./gitea/ks.yaml
+  # - ./bazarr/ks.yaml
+  # - ./calibre-web/ks.yaml
+  # - ./gitea/ks.yaml
   - ./govee2mqtt/ks.yaml
-  - ./home-assistant/ks.yaml
+  # - ./home-assistant/ks.yaml
   - ./immich/ks.yaml
   - ./lldap/ks.yaml
-  - ./mosquitto/ks.yaml
-  - ./nextcloud/ks.yaml
-  - ./overseerr/ks.yaml
-  - ./paperless/ks.yaml
-  - ./plex/ks.yaml
-  - ./prowlarr/ks.yaml
-  - ./radarr/ks.yaml
-  - ./radicale/ks.yaml
-  - ./recyclarr/ks.yaml
-  - ./redlib/ks.yaml
-  - ./sabnzbd/ks.yaml
+  # - ./mosquitto/ks.yaml
+  # - ./nextcloud/ks.yaml
+  # - ./overseerr/ks.yaml
+  # - ./paperless/ks.yaml
+  # - ./plex/ks.yaml
+  # - ./prowlarr/ks.yaml
+  # - ./radarr/ks.yaml
+  # - ./radicale/ks.yaml
+  # - ./recyclarr/ks.yaml
+  # - ./redlib/ks.yaml
+  # - ./sabnzbd/ks.yaml
   - ./smtp-relay/ks.yaml
-  - ./sonarr/ks.yaml
-  - ./tandoor/ks.yaml
-  - ./tautulli/ks.yaml
-  - ./vaultwarden/ks.yaml
-  - ./zigbee2mqtt/ks.yaml
+  # - ./sonarr/ks.yaml
+  # - ./tandoor/ks.yaml
+  # - ./tautulli/ks.yaml
+  # - ./vaultwarden/ks.yaml
+  # - ./zigbee2mqtt/ks.yaml
