--- a/kubernetes/main/apps/default/home-assistant/ks.yaml
+++ b/kubernetes/main/apps/default/home-assistant/ks.yaml
@@ -13,7 +13,7 @@ spec:
   dependsOn:
     - name: multus-config
     - name: cloudnative-pg-cluster
-    - name: longhorn
+    - name: rook-ceph-cluster
     - name: external-secrets-stores
     - name: volsync
   path: ./kubernetes/main/apps/default/home-assistant/app
