--- a/kubernetes/main/apps/default/calibre-web/ks.yaml
+++ b/kubernetes/main/apps/default/calibre-web/ks.yaml
@@ -11,7 +11,7 @@ spec:
     labels:
       app.kubernetes.io/name: *appname
   dependsOn:
-    - name: longhorn
+    - name: rook-ceph-cluster
     - name: volsync
   path: ./kubernetes/main/apps/default/calibre-web/app
   prune: true
