--- a/kubernetes/main/apps/default/kyoo/app/pvc.yaml
+++ b/kubernetes/main/apps/default/kyoo/app/pvc.yaml
@@ -9,7 +9,7 @@ spec:
   resources:
     requests:
       storage: 5Gi
-  storageClassName: longhorn
+  storageClassName: ceph-block
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -21,7 +21,7 @@ spec:
   resources:
     requests:
       storage: 5Gi
-  storageClassName: longhorn
+  storageClassName: ceph-block
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -33,4 +33,4 @@ spec:
   resources:
     requests:
       storage: 30Gi
-  storageClassName: longhorn
+  storageClassName: ceph-block
