--- a/kubernetes/main/apps/default/nextcloud/ks.yaml
+++ b/kubernetes/main/apps/default/nextcloud/ks.yaml
@@ -11,7 +11,7 @@ spec:
       app.kubernetes.io/name: *appname
   dependsOn:
     - name: volsync
-    - name: longhorn
+    - name: rook-ceph-cluster
     - name: cloudnative-pg-cluster
     - name: external-secrets-stores
   path: ./kubernetes/main/apps/default/nextcloud/app
