--- a/kubernetes/main/apps/default/overseerr/ks.yaml
+++ b/kubernetes/main/apps/default/overseerr/ks.yaml
@@ -10,7 +10,7 @@ spec:
     labels:
       app.kubernetes.io/name: *appname
   dependsOn:
-    - name: longhorn
+    - name: rook-ceph-cluster
     - name: volsync
   path: ./kubernetes/main/apps/default/overseerr/app
   prune: true
