--- a/kubernetes/main/apps/default/plex/ks.yaml
+++ b/kubernetes/main/apps/default/plex/ks.yaml
@@ -11,7 +11,7 @@ spec:
       app.kubernetes.io/name: *appname
   dependsOn:
     - name: volsync
-    - name: longhorn
+    - name: rook-ceph-cluster
   path: ./kubernetes/main/apps/default/plex/app
   prune: true
   sourceRef:
@@ -98,7 +98,7 @@ spec:
     name: home-kubernetes
   wait: false
   dependsOn:
-    - name: longhorn
+    - name: rook-ceph-cluster
     - name: volsync
     - name: external-secrets-stores
     - name: plex
