--- a/kubernetes/main/apps/default/recyclarr/ks.yaml
+++ b/kubernetes/main/apps/default/recyclarr/ks.yaml
@@ -12,7 +12,7 @@ spec:
   dependsOn:
     - name: volsync
     - name: external-secrets-stores
-    - name: longhorn
+    - name: rook-ceph-cluster
   path: ./kubernetes/main/apps/default/recyclarr/app
   prune: true
   sourceRef:
