--- a/kubernetes/main/apps/default/sonarr/ks.yaml
+++ b/kubernetes/main/apps/default/sonarr/ks.yaml
@@ -14,7 +14,7 @@ spec:
     - name: cloudnative-pg-cluster
     - name: external-secrets-stores
     - name: volsync
-    - name: longhorn
+    - name: rook-ceph-cluster
   path: ./kubernetes/main/apps/default/sonarr/app
   prune: true
   sourceRef:
