--- a/kubernetes/main/apps/default/tandoor/ks.yaml
+++ b/kubernetes/main/apps/default/tandoor/ks.yaml
@@ -12,7 +12,7 @@ spec:
   dependsOn:
     - name: volsync
     - name: cloudnative-pg-cluster
-    - name: longhorn
+    - name: rook-ceph-cluster
     - name: external-secrets-stores
   path: ./kubernetes/main/apps/default/tandoor/app
   prune: true
