--- a/kubernetes/main/apps/default/tautulli/ks.yaml
+++ b/kubernetes/main/apps/default/tautulli/ks.yaml
@@ -12,7 +12,7 @@ spec:
       app.kubernetes.io/name: *appname
   dependsOn:
     - name: volsync
-    - name: longhorn
+    - name: rook-ceph-cluster
   path: ./kubernetes/main/apps/default/tautulli/app
   prune: true
   sourceRef:
