--- a/kubernetes/main/templates/volsync/claim.yaml
+++ b/kubernetes/main/templates/volsync/claim.yaml
@@ -13,4 +13,4 @@ spec:
   resources:
     requests:
       storage: "${VOLSYNC_CAPACITY:-5Gi}"
-  storageClassName: "${VOLSYNC_STORAGECLASS:-longhorn}"
+  storageClassName: "${VOLSYNC_STORAGECLASS:-ceph-block}"
