--- a/kubernetes/main/apps/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/main/apps/monitoring/grafana/app/helmrelease.yaml
@@ -84,14 +84,14 @@ spec:
             editable: true
             options:
               path: /var/lib/grafana/dashboards/default
-          - name: smarthome
+          - name: ceph
             orgId: 1
-            folder: Smarthome
+            folder: Ceph
             type: file
             disableDeletion: false
-            allowUiUpdates: true
+            editable: true
             options:
-              path: /var/lib/grafana/dashboards/smarthome
+              path: /var/lib/grafana/dashboards/ceph
           - name: flux
             orgId: 1
             folder: Flux
@@ -118,7 +118,7 @@ spec:
               path: /var/lib/grafana/dashboards/nginx
           - name: unifi
             orgId: 1
-            folder: Nginx
+            folder: Unifi
             type: file
             disableDeletion: false
             editable: true
@@ -198,6 +198,24 @@ spec:
           datasource:
             - { name: DS_PROMETHEUS, value: Prometheus }
             - { name: VAR_REPLICATIONDESTNAME, value: .*-dst }
+
+      ceph:
+        ceph-cluster:
+          # renovate: dashboardName="Ceph Cluster"
+          gnetId: 2842
+          revision: 18
+          datasource: Prometheus
+        ceph-osd:
+          # renovate: dashboardName="Ceph - OSD (Single)"
+          gnetId: 5336
+          revision: 9
+          datasource: Prometheus
+        ceph-pools:
+          # renovate: dashboardName="Ceph - Pools"
+          gnetId: 5342
+          revision: 9
+          datasource: Prometheus
+
       nginx:
         nginx:
           url: https://raw.githubusercontent.com/kubernetes/ingress-nginx/master/deploy/grafana/dashboards/nginx.json
